Fix iOS spacing

--- a/src/components/Summary/MoodLogCard.css
+++ b/src/components/Summary/MoodLogCard.css
@@ -64,8 +64,8 @@
     z-index: 2000;
 }
 
-div.flickity-enabled.is-fullscreen > button.flickity-button {
-    top: max(env(safe-area-inset-top), 10px);
+div.flickity-enabled.is-fullscreen > .flickity-fullscreen-button, .flickity-download-button {
+    top: max(env(safe-area-inset-top), 10px) !important;
 }
 
 .flickity-enabled.is-fullscreen ol.flickity-page-dots {
